--- a/.github/workflows/2-create-workflow.yml
+++ b/.github/workflows/2-create-workflow.yml
@@ -1,51 +1,26 @@
-name: Step 2, Create workflow
+  
+name: Run Azure Login with OpenID Connect and PowerShell
+on: [push]
 
-# This step listens for the learner to commit a file .github/workflows/my-first-workflow to branch `deploy-resource-group`
-# This step sets STEP to X
-# This step closes <details id=2> and opens <details id=X>
-
-# This will run every time we create a workflow on branch `deploy-resource-group`
-# Reference https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - 'deploy-resource-group'
-
-# Reference https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
-  # Need `contents: read` to checkout the repository
-  # Need `contents: write` to update the step metadata
-  contents: write
+      id-token: write
+      contents: read
+      
+jobs: 
+  Windows-latest:
+      runs-on: windows-latest
+      steps:
+        - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
+          uses: azure/login@v1
+          with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
+            enable-AzPSSession: true
 
-jobs:
-  on_create_workflow:
-    name: On Create workflow
-
-    # We will only run this action when:
-    # 1. This repository isn't the template repository
-    # Reference https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: ${{ !github.event.repository.is_template }}
-
-    # We'll run Ubuntu for performance instead of Mac or Windows
-    runs-on: ubuntu-latest
-
-    steps:
-      # We'll need to check out the repository so that we can edit the README
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Let's get all the branches
-
-      # TBD-step-2-additional-steps
-
-      # Update README to close <details id=2> and open <details id=X>
-      # and set STEP to '3'
-      - name: Update to step X
-        uses: skills/action-update-step@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 2
-          to_step: X
-          branch_name: deploy-resource-group
+        - name: 'Create resource group with PowerShell action'
+          uses: azure/powershell@v1
+          with:
+             inlineScript: |
+               New-AzResourceGroup -Name MyFirstResourceGroup -Location "South Central US"
+             azPSVersion: "latest"
